<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_broadcast"
        android:title="@string/action_broadcast" />
    <item
        android:id="@+id/action_local_broadcast"
        android:title="@string/local_broadcast_button" />
    <item
        android:id="@+id/action_sava_data"
        android:title="@string/sava_data" />
    <item
        android:id="@+id/notification"
        android:title="@string/notification" />
    <item
        android:id="@+id/multithreading"
        android:title="@string/multithreading" />
    <item
        android:id="@+id/async_task"
        android:title="@string/async_task" />
    <item
        android:id="@+id/network"
        android:title="@string/network" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
