<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_save_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.exborn.learnandroiddemo.SaveDataActivity">

    <Button
        android:text="@string/sava_data_to_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/sava_data_to_file" />

    <Button
        android:text="@string/daba_data_to_share_reference"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sava_data_to_file"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/daba_data_to_share_reference" />

    <Button
        android:text="@string/sava_data_to_db"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sava_data_to_db"
        android:layout_below="@+id/daba_data_to_share_reference"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
